--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,13 @@ authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 pyspark = "3.3.1"
 apache-sedona = {extras = ["spark"], version = "^1.5.1"}
 notebook = "^7.1.2"
+ipyleaflet = "^0.18.2"
+osmnx = "^1.9.2"
+networkx = "^3.3"
 
 
 [build-system]
