--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
 apache-sedona[spark]
+apache-sedona[kepler-map]
 pyspark
 notebook
 geopandas
 ipyleaflet
+fiona
+ipykernel
+ipywidgets
+jupyterlab-widgets
+keplergl
+matplotlib
+numpy
+pandas
+pydeck
+rasterio
+shapely
